bug fix sidebar overflow

--- a/Resources/Private/SASS/phlu.scss
+++ b/Resources/Private/SASS/phlu.scss
@@ -436,6 +436,7 @@ body {
     display: block;
     background-color: white;
     padding-top: 11px;
+    overflow-x: hidden;
     /*
        set fixed width on big screens
       */
